# persiantoolbox

./: .env.example  .env.production  .env.production.example  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT-NOW.md  DOCS_STATUS.md  DOCUMENTATION.md  LICENSE  LICENSE-COMMERCIAL.md  NOTICE  README.md  SECURITY.md  auto-deploy.sh  copy-project-to-vps.sh  deep-research-report-codex.md  deploy-blue-green.sh  deploy-interactive.sh  deploy-staging.sh  deploy-vps-auto.sh  deploy-vps.sh  deploy.py  ecosystem.config.js  eslint.config.mjs  health-monitor.sh  instrumentation.ts  lighthouserc.json  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  proxy.ts  (+11 more)
.archive/: README.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts  twitter-image.tsx
components/: HomePage.tsx  UpgradeModal.tsx
docs/: AI_AGENT_TECHNICAL_AUDIT.md  DEPLOYMENT_LOG.md  DEVELOPER-GUIDE.md  GSC_LIVE_STATS_20260709.md  HANDOFF.md  MANUAL-TASKS.md  README.md  (+27 more)
scripts/automation/: backup.sh  deploy.sh  health-check.sh  live-link-checker.sh  post-deploy-verify.sh  pyproject.toml  security-audit.sh  server-health.sh  ssl-monitor.sh  vps-shutdown.sh  vps-startup.sh
scripts/automation/automation/: __init__.py  backup.py  deploy.py  health.py  security.py  server.py  shutdown.py  ssh_client.py  startup.py
(+1878 files in other folders)
